<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            style="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/infoheader" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dim_dark" />

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/infoshare" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="opengallery"
            android:text="@string/gallery" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dim_dark" />

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/infoshortcut" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="openhomescreen"
            android:text="@string/home" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="all"
            android:text="@string/infofooter" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="postcomment"
            android:text="@string/postcomment" />

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="all"
            android:text="@string/infosubfooter" />
    </LinearLayout>
</ScrollView>
